	ipmiconsole/ipmiconsole.8.in: Fix manpage output bug.

	* ipmimonitoring/ipmimonitoring.8.in: Reword some text.

	* ipmipower/ipmipower8.in, ipmiconsole/ipmiconsole.8.in,
	ipmimonitoring/libipmimonitoring.3.in: Update some text.

	* ac_ipmi_monitoring_sensor_config_file.m4: Fix filename typo.

	* doc/freeipmi-faq.texi: Fix some wording.

2007-04-25  Albert Chu <chu11@llnl.gov>

	* configure.ac: Add pre-req header checks for linux/ipmi.h.

	* ipmipower/src/ipmipower.h, ipmipower/src/ipmipower_config.c,
	ipmipower/src/ipmipower.c: Change '_set' parameters to
	'_set_on_cmdline'.

	* ipmiconsole/src/ipmiconsole/ipmiconsole_config.h,
	ipmiconsole/src/ipmiconsole/ipmiconsole_config.c: Change '_set'
	parameters to '_set_on_cmdline'.
	
2007-04-24  Albert Chu <chu11@llnl.gov>

	* common/src/pstdout.c (_pstdout_print, _pstdout_print_wrapper,
	_pstdout_output_finish): Add race protections w/
	no_more_external_output flag.

	* common/src/pstdout.c (_pstdout_print_wrapper, pstdout_printf,
	pstdout_fprintf, pstdout_perror, _pstdout_output_finish): Adjust
	calls appropriately.

	* common/src/pstdout.c (_pstdout_state_init): Init mutex.
	
	* common/src/pstdout.c (_pstdout_sigint_finish_output): Output
	information on which threads were canceled early.
	
2007-04-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-netfn-spec.h: Allow OEM
	network functions.

	* ipmipower/src/ipmipower_powercmd.c
	(_check_activate_session_authentication_type): Workaround
	permsgauth issue.

	* ipmipower/ipmipower.8.in: Update workaround issue.

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c
	(_ipmi_lan_cmd_send, ipmi_lan_cmd),
	libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c
	(ipmi_lan_open_session), libfreeipmi/src/udm/ipmi-udm-device.h,
	libfreeipmi/src/udm/ipmi-udm.c (ipmi_open_outofband,
	_ipmi_outofband_close): Support permsgauth in udm.
	
2007-04-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Support lan config get authentication type
	support.
	